packages/components/alert/style/index.less
@import '../../style/mixins/reset.less';
@import './mixin.less';

.@{alert-prefix} {
  .reset-component();

  position: relative;
  display: flex;
  align-items: center;
  word-wrap: break-word;
  font-size: @alert-font-size;
  line-height: @alert-line-height;
  margin-bottom: @alert-margin-bottom;
  padding: @alert-padding;
  color: @alert-color;
  border-radius: @alert-border-radius;

  .alert-transition();

  .alert-status-color(success, @alert-success-color, @alert-success-background-color);
  .alert-status-color(info, @alert-info-color, @alert-info-background-color);
  .alert-status-color(warning, @alert-warning-color, @alert-warning-background-color);
  .alert-status-color(error, @alert-error-color, @alert-error-background-color);

  &-with-description {
    align-items: flex-start;

    .@{alert-prefix}-icon {
      font-size: @alert-icon-font-size-with-description;
      margin-right: @alert-icon-margin-right-with-description;
    }

    .@{alert-prefix}-title {
      font-size: @alert-title-font-size-with-description;
      margin-bottom: @alert-title-margin-bottom-with-description;
    }
  }

  &-icon {
    margin-right: @alert-icon-margin-right;
  }

  &-content {
    flex: 1;
    min-width: 0;
  }

  &-pagination {
    margin-left: @alert-action-margin-left;
    line-height: @alert-icon-font-size;
    color: @alert-color-secondary;

    &-text {
      padding: @alert-pagination-text-padding;
    }

    &-icon {
      cursor: pointer;
      vertical-align: middle;
      &:hover {
        color: @alert-color;
      }

      &.@{alert-prefix}-pagination-disabled {
        cursor: not-allowed;
        color: @alert-disabled-color;
      }
    }
  }

  &-close-icon {
    cursor: pointer;
    margin-left: @alert-action-margin-left;
    color: @alert-color-secondary;
    transition: color @transition-duration-base;

    &:hover {
      color: @alert-color;
    }
  }

  .@{icon-prefix} {
    font-size: @alert-icon-font-size;
  }
}

